# ghc-sandbox-chaining-experiment

./: build.gradle  sandbox-chain.sh  settings.gradle
app/: app.cabal
lib1/: lib1.cabal
lib2/: lib2.cabal
